--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<iframe name="m" src="http://www.baidu.com/" onload="window.open('\u0000javascript：alert(document.location)','m')" >
+this is a test 2
